--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "http://localhost:5216",
+    "Audience": "http://localhost:5216",
+    "SigningKey": "tallerWebMovil"
+  }
 }
